# quartz-scripts

./: .gitignore  COPYRIGHT  README.md  convert2h5.py  convert2npy.py  csv2scale.py  datfix.py  datinfo.py  downsamph5.py  end2end-scale.txt  fft.py  gain-fit.py  h52uff58.py  json2scale.py  lsuff  plot.py  process.py  pyproject.toml  reshape.py  sn1003-cal.txt  stft.py  swdec.py
.github/workflows/: py.yml
calibration/20240326/: sn1003-cal.txt  sn1004-cal.txt  sn1005-cal.txt  sn1006-cal.txt  sn1007-cal.txt  sn1008-cal.txt  sn1009-cal.txt  sn1011-cal.txt  sn1012-cal.txt  sn1013-cal.txt  sn1014-cal.txt  sn1015-cal.txt  sn1016-cal.txt  sn1017-cal.txt  sn1018-cal.txt  sn1019-cal.txt  sn1020-cal.txt  sn1021-cal.txt  sn1022-cal.txt  sn1023-cal.txt  sn1024-cal.txt  sn1025-cal.txt  sn1026-cal.txt  sn1027-cal.txt  sn1028-cal.txt  sn1029-cal.txt  sn1030-cal.txt  sn1031-cal.txt  sn1032-cal.txt  sn1033-cal.txt  sn1035-cal.txt
mic-test-20240514/: convert-mic-test.sh
quartz/: __init__.py  __main__.py  psc.py  quartz.py  uff.py
quartz/test/: mic-test.json  test_chan.py  test_psc.py  test_uff58.py
tools/: datcheck.py  datinfo.py
